@@ -1,5 +1,13 @@
 2011-09-19  Alexis Menard  <alexis.menard@openbossa.org>
 
+        [Qt] Unreviewed coding style fix.
+
+        * UIProcess/API/qt/qdesktopwebview.h:
+        * UIProcess/API/qt/qtouchwebpage.h:
+        * UIProcess/API/qt/qweberror.h:
+
+2011-09-19  Alexis Menard  <alexis.menard@openbossa.org>
+
         [Qt][WK2] Make loading errors API easier to use.
         https://bugs.webkit.org/show_bug.cgi?id=68357
 
